# Andriod-VideoPlay

VideoPlay/: gradle.properties  settings.gradle
VideoPlay/gradle/wrapper/: gradle-wrapper.properties
VideoPlay/practice_01/: .gitignore  CMakeLists.txt  build.gradle
VideoPlay/practice_01/src/androidTest/java/com/practice_01/videoplay/: ExampleInstrumentedTest.java
VideoPlay/practice_01/src/main/: AndroidManifest.xml  FFDemux.h
VideoPlay/practice_01/src/main/cpp/: FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFPlayerBuilder.cpp  FFPlayerBuilder.h  FFResample.h  GLVideoView.cpp  GLVideoView.h  IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IPlayerBuilder.h  IPlayerProxy.cpp  IPlayerProxy.h  IResample.h  IVideoView.cpp  IVideoView.h  SLAudioPlay.cpp  SLAudioPlay.h  XData.h  XEGL.cpp  XEGL.h  XLog.h  XParameter.cpp  XParameter.h  XShader.cpp  XShader.h  XTexture.cpp  XTexture.h  XThread.cpp  XThread.h  (+2 more)
VideoPlay/practice_01/src/main/java/: com_practice_01_videoplay_MainActivity.h
VideoPlay/practice_01/src/main/java/com/practice_01/videoplay/: MainActivity.java  SurfaceView.java
VideoPlay/practice_01/src/main/res/layout/: activity_main.xml
VideoPlay/practice_01/src/test/java/com/practice_01/videoplay/: ExampleUnitTest.java
VideoPlay/practice_02/: .gitignore  CMakeLists.txt  build.gradle
VideoPlay/practice_02/src/main/: AndroidManifest.xml
VideoPlay/practice_03_opensl/: build.gradle
VideoPlay/practice_03_opensl/src/main/: AndroidManifest.xml
VideoPlay/practice_04_opengl/: CMakeLists.txt  build.gradle
VideoPlay/practice_05_decode/: .gitignore  CMakeLists.txt  build.gradle
VideoPlay/test_01/: .gitignore  build.gradle
VideoPlay/test_01/src/main/cpp/: FFDemux.cpp  (+44 more)
(+77 files in other folders)
